<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>elevation_net</name>
  <version>2.0.1</version>
  <description>TogetheROS elevation net</description>
  <maintainer email="xue.liang@horizon.ai">xue.liang</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>rclcpp</depend>
  <depend>dnn_node</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>hbm_img_msgs</depend>
  <depend>ai_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
